Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+    <img src="http://localhost:3000/imagen/usuarios/5d45dbf214942d41dc726731 - 416.png" alt="">
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
